# azihsm-sdk

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
api/lib/: Cargo.toml
api/lib/src/: error.rs  lib.rs  partition.rs  resiliency.rs  session.rs  shared_types.rs
api/lib/src/algo/: hash.rs  mod.rs
api/lib/src/ddi/: aes.rs  aes_xts_key.rs  dev.rs  ecc.rs  hkdf.rs  hmac.rs  key.rs  masked_key.rs  mod.rs  partition.rs  partition_ex.rs  rsa.rs  sd_sealing_key_gen.rs  session.rs  session_ex.rs
api/native/: Cargo.toml  cbindgen.toml
api/native/doc/: chapter_00_change_history.md  chapter_02_part.md  chapter_03_session.md  chapter_09_data_structs.md  chapter_09_sd.md  chapter_10_data_structs.md  chapter_11_handle_ops.md
api/native/src/: handle_table.rs  key_mgmt.rs  key_props.rs  lib.rs  partition.rs  partition_props.rs  resiliency.rs  session.rs  session_ex.rs  utils.rs
api/native/src/algo/: mod.rs
api/tests/: Cargo.toml  build.rs
api/tests/cpp/: CMakeLists.txt  multi_process_tests.cpp  partition_tests.cpp  session_ex_tests.cpp  session_tests.cpp
api/tests/cpp/handle/: part_handle.hpp  part_list_handle.hpp  session_handle.hpp
api/tests/cpp/utils/: aes_keygen.cpp  aes_keygen.hpp  part_init_config.cpp  part_init_config.hpp  resiliency_config.cpp  resiliency_config.hpp  sd_provision.cpp  sd_provision.hpp  utils.hpp
api/tests/src/: emu_helpers.rs  lib.rs  partition_ex_tests.rs  partition_tests.rs  resiliency_tests.rs  sealing_ex_tests.rs  session_ex_tests.rs  session_tests.rs
api/tests/src/algo/: hash.rs  mod.rs
api/tests/src/resiliency/: helpers.rs
api/tests/src/utils/: api.rs  partition.rs  resiliency.rs  session.rs
crates/cred_encrypt/: Cargo.toml
crates/cred_encrypt/src/: lib.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto/src/: lib.rs  libctx.rs
crates/crypto/src/aes/: cbc_ossl.rs  cbc_ossl11.rs  ecb_ossl.rs  ecb_ossl11.rs  gcm_ossl.rs  gcm_ossl11.rs  key_cng.rs  key_ossl.rs  mod.rs  xts_ossl.rs  xts_ossl11.rs
crates/crypto/src/ecc/: be.rs  ecc_ossl.rs  ecc_ossl11.rs  ecdh_ossl.rs  ecdh_ossl11.rs  key_cng.rs  key_ossl.rs  mod.rs
crates/crypto/src/hash/: hash_cng.rs  hash_ossl.rs  hash_ossl11.rs  mod.rs
crates/crypto/src/hmac/: hmac_ossl.rs  hmac_ossl11.rs  mod.rs
crates/crypto/src/kdf/: hkdf_ossl.rs  hkdf_ossl11.rs  mod.rs
crates/crypto/src/rand/: mod.rs
crates/crypto/src/rsa/: mod.rs  rsa_enc_ossl.rs  rsa_enc_ossl11.rs  rsa_hash_sign_ossl.rs  rsa_hash_sign_ossl11.rs  rsa_sign_cng.rs  rsa_sign_ossl.rs  rsa_sign_ossl11.rs
crates/crypto/src/testvectors/: mod.rs
crates/crypto/src/x509_builder/: cert_builder.rs  csr_builder.rs  der_helpers.rs  device_csr.rs  intermediate_cert.rs  mod.rs
crates/session_ex_crypto/: Cargo.toml
crates/session_ex_crypto/src/: lib.rs
crates/tpm/: Cargo.toml
ddi/emu/: Cargo.toml
ddi/emu/src/: ddi.rs  dev.rs  lib.rs  op.rs
ddi/interface/: Cargo.toml
ddi/interface/src/: error.rs  lib.rs
ddi/lib/: Cargo.toml
ddi/lib/src/: lib.rs
ddi/lib/tests/integration/: aes_generate.rs  attest_key.rs  change_pin.rs  common.rs  ecc_generate.rs  establish_credential.rs  hmac.rs  live_migration_expected_errors.rs  live_migration_sim.rs  masked_key.rs  masked_key_aes_gen.rs  masked_key_ecc_gen.rs  masked_key_ecdh_exchange.rs  masked_key_get_unwrapping.rs  masked_key_hkdf_derive.rs  masked_key_kbkdf_derive.rs  masked_key_rsa_unwrap.rs  open_session.rs  prov_part.rs  reopen_session.rs  secret_hkdf_derive.rs  secret_kbkdf_derive.rs
ddi/mbor/codec/: Cargo.toml
ddi/mbor/codec/src/: decode.rs  encode.rs  len.rs  lib.rs
ddi/mbor/derive/: Cargo.toml
ddi/mbor/derive/src/: decode.rs  encode.rs  len.rs  lib.rs  open_enum.rs  struct.rs
ddi/mbor/derive/tests/: compile_tests.rs
ddi/mbor/sim/: Cargo.toml
ddi/mbor/sim/src/: aesgcmxts.rs  attestation.rs  credentials.rs  crypto_env.rs  dispatcher.rs  errors.rs  function.rs  lib.rs  lmkey_derive.rs  mask.rs  report.rs  session.rs  session_table.rs  sim_crypto_env.rs  table.rs  vault.rs
ddi/mbor/test_helpers/: Cargo.toml
ddi/mbor/test_helpers/src/: aes.rs  api_rev.rs  attest_key.rs  change_pin.rs  credential.rs  device.rs  ecc.rs  ecdh.rs  error.rs  get_cert.rs  get_sealed_bk3.rs  hkdf.rs  hmac.rs  init_bk3.rs  kbkdf.rs  key.rs  key_properties.rs  lib.rs  mask.rs  report.rs  rsa.rs  session.rs  set_sealed_bk3.rs  tpm_unseal.rs
ddi/mbor/types/: Cargo.toml
ddi/mbor/types/src/: aes.rs  attest_key.rs  change_pin.rs  close_session.rs  decoder.rs  delete_key.rs  der.rs  derive.rs  ecc.rs  encoder.rs  error.rs  establish_credential.rs  get_api_rev.rs  get_cert.rs  get_device_info.rs  get_establish_cred_encryption_key.rs  get_sealed_bk3.rs  get_session_encryption_key.rs  get_unwrapping_key.rs  hmac.rs  init_bk3.rs  lib.rs  mask.rs  masked_key.rs  metadata.rs  open_key.rs  open_session.rs  reopen_session.rs  rsa.rs  (+3 more)
ddi/mock/: Cargo.toml
ddi/mock/src/: ddi.rs  dev.rs
ddi/res_test_dev/: Cargo.toml
ddi/res_test_dev/src/: dev.rs  fault.rs  lib.rs
ddi/tbor/derive/: Cargo.toml
ddi/tbor/test_helpers/: Cargo.toml
ddi/tbor/types/: Cargo.toml
ddi/win/: Cargo.toml
ddi/win/src/: dev.rs
fw/core/evidence/: Cargo.toml
fw/core/tracing/: Cargo.toml
fw/pal/traits/: Cargo.toml
fw/plat/uno/: Cargo.toml  rustfmt.toml  taplo.toml
plugins/ossl_engine/azihsm_ossl_engine_core/: Cargo.toml
plugins/ossl_engine/azihsm_ossl_engine_resiliency/: Cargo.toml
plugins/ossl_prov/: CMakeLists.txt  Cargo.toml  README.md  build.rs
plugins/ossl_prov/inc/: azihsm_ossl_base.h  azihsm_ossl_base.h.in  azihsm_ossl_ec.h  azihsm_ossl_hsm.h  azihsm_ossl_masked_key.h  azihsm_ossl_pkey_param.h  azihsm_ossl_resiliency.h  azihsm_ossl_rsa.h  azihsm_ossl_signature_rsa.h
plugins/ossl_prov/nginx-example/: README.md
plugins/ossl_prov/src/: azihsm_ossl_base.c  azihsm_ossl_hsm.c  azihsm_ossl_kdf.c  azihsm_ossl_keyexch.c  azihsm_ossl_keymgmt_ec.c  azihsm_ossl_keymgmt_rsa.c  azihsm_ossl_mac.c  azihsm_ossl_masked_key.c  azihsm_ossl_pkey_param.c  azihsm_ossl_resiliency.c  azihsm_ossl_signature_rsa.c
tools/resiliency_stress/: Cargo.toml
tools/resiliency_stress/src/: main.rs
(+880 files in other folders)
