# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "azihsm_api_native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
azihsm_api.workspace = true
open-enum.workspace = true
parking_lot.workspace = true
tracing.workspace = true
zerocopy = { features = ["derive"], workspace = true }

[features]
default = []
emu = ["azihsm_api/emu"]
mock = ["azihsm_api/mock"]

[lints]
workspace = true
