# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "azihsm_api_tests"
version = "0.0.0"

[dependencies]
azihsm_crypto = { features = ["testvectors"], workspace = true }

[build-dependencies]
cmake.workspace = true

[dev-dependencies]
azihsm_api.workspace = true
azihsm_api_tests_macro.workspace = true
azihsm_crypto.workspace = true
hex.workspace = true
libtest-mimic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

[features]
default = []
mock = ["azihsm_api/mock"]

[lints]
workspace = true

[[test]]
harness = false
name = "cpp"
path = "cpp/tests.rs"
