# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "azihsm_session_ex_crypto"
version = "0.1.0"

[dependencies]
azihsm_crypto.workspace = true
azihsm_ddi_tbor_types.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[features]
default = []

[lints]
workspace = true
