# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_emu"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
azihsm_ddi_interface.workspace = true
azihsm_ddi_mbor_codec.workspace = true
azihsm_ddi_mbor_types.workspace = true
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_types.workspace = true
azihsm_fw_hsm_pal_traits.workspace = true
azihsm_fw_hsm_std.workspace = true
bitfield-struct.workspace = true
parking_lot.workspace = true
tokio = { features = ["rt-multi-thread", "sync"], workspace = true }
tracing.workspace = true

[dev-dependencies]
azihsm_ddi_mbor_codec.workspace = true
tokio = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
