# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_interface"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
azihsm_ddi_mbor_types.workspace = true
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_types.workspace = true
minicbor = { features = ["derive", "std"], workspace = true }
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true

[lints]
workspace = true
