# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
azihsm_ddi_interface.workspace = true
azihsm_ddi_mock = { optional = true, workspace = true }
cfg-if.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
azihsm_ddi_nix.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
azihsm_ddi_win.workspace = true

[dev-dependencies]
azihsm_cred_encrypt.workspace = true
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_mbor.workspace = true
azihsm_ddi_mock.workspace = true
azihsm_ddi_nix.workspace = true
azihsm_ddi_test_helpers.workspace = true
azihsm_ddi_types.workspace = true
azihsm_ddi_win.workspace = true
bitflags.workspace = true
chrono.workspace = true
minicbor.workspace = true
parking_lot.workspace = true
test_with_tracing.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
x509.workspace = true

[features]
default = []
mock = ["azihsm_ddi_mock"]
table-4 = ["azihsm_ddi_mock/table-4"]
table-64 = ["azihsm_ddi_mock/table-64"]

[lints]
workspace = true
