# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
azihsm_ddi_emu = { optional = true, workspace = true }
azihsm_ddi_interface.workspace = true
azihsm_ddi_mock = { optional = true, workspace = true }
cfg-if.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
azihsm_ddi_nix.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
azihsm_ddi_win.workspace = true

[features]
default = []
emu = ["azihsm_ddi_emu"]
mock = ["azihsm_ddi_mock"]
table-4 = ["azihsm_ddi_mock/table-4"]
table-64 = ["azihsm_ddi_mock/table-64"]

[lints]
workspace = true
