# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_res_test_dev"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
azihsm_ddi_interface.workspace = true
azihsm_ddi_mbor_types.workspace = true
parking_lot.workspace = true
tracing.workspace = true
