# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "resiliency_stress"
publish = false
version = "0.1.0"

[[bin]]
name = "resiliency_stress"
path = "src/main.rs"

[dependencies]
azihsm_api.workspace = true
azihsm_crypto.workspace = true
azihsm_ddi_sim.workspace = true
azihsm_res_test_dev = { optional = true, workspace = true }
azihsm_resiliency_test_helpers.workspace = true
clap = { features = ["derive"], workspace = true }
libc.workspace = true
memmap2 = "0.9"
parking_lot = { features = ["deadlock_detection"], workspace = true }
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
mock = ["azihsm_api/mock"]
res-test = ["azihsm_api/res-test", "azihsm_res_test_dev"]

[lints]
workspace = true
