# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_mbor_test_helpers"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_mbor_codec.workspace = true
azihsm_ddi_mbor_types.workspace = true
azihsm_tpm.workspace = true
bitfield-struct.workspace = true
minicbor.workspace = true
thiserror.workspace = true
zerocopy = { features = ["derive"], workspace = true }

[lints]
workspace = true
