# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_mbor_types"
version = "0.1.0"

[dependencies]
azihsm_ddi_mbor_codec.workspace = true
azihsm_ddi_mbor_derive.workspace = true
open-enum.workspace = true
pastey.workspace = true
zerocopy = { features = ["derive"], workspace = true }

# dependencies for fuzzing
arbitrary = { optional = true, workspace = true }

# dependencies for pre_encode and/or post_decode
pkcs1 = { optional = true, workspace = true }
sec1 = { features = ["alloc"], optional = true, workspace = true }
spki = { features = ["alloc"], optional = true, workspace = true }
tracing = { optional = true, workspace = true }

[dev-dependencies]
azihsm_cred_encrypt.workspace = true
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_mbor_codec.workspace = true
azihsm_ddi_mbor_test_helpers.workspace = true
azihsm_ddi_mock.workspace = true
azihsm_ddi_nix.workspace = true
azihsm_ddi_win.workspace = true
bitflags.workspace = true
chrono.workspace = true
minicbor.workspace = true
parking_lot.workspace = true
test_with_tracing.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
x509.workspace = true

[lib]
doctest = false

[[test]]
name = "azihsm_ddi_tests"
path = "tests/azihsm_ddi_tests.rs"

[features]
array = ["azihsm_ddi_mbor_codec/array"]
featuregroup-crypto = ["pkcs1", "sec1", "spki"]
fuzzing = ["arbitrary", "azihsm_ddi_mbor_codec/fuzzing"]
post_decode = [
  "azihsm_ddi_mbor_codec/post_decode",
  "featuregroup-crypto",
  "tracing",
]
pre_encode = [
  "azihsm_ddi_mbor_codec/pre_encode",
  "featuregroup-crypto",
  "tracing",
]
# Forward backend selection to the azihsm_ddi facade so the integration
# test binary picks up the right mock/table-size combination.
emu = ["azihsm_ddi/emu"]
mock = ["azihsm_ddi/mock"]
table-4 = ["azihsm_ddi/table-4"]
table-64 = ["azihsm_ddi/table-64"]

[lints]
workspace = true
