# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_tbor_test_helpers"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
azihsm_ddi.workspace = true
azihsm_ddi_interface.workspace = true
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_types.workspace = true

[lints]
workspace = true
