# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_ddi_tbor_types"
version = "0.1.0"

[dependencies]
azihsm_ddi_tbor_codec.workspace = true
azihsm_ddi_tbor_derive.workspace = true
bitfield-struct.workspace = true
open-enum.workspace = true
zerocopy = { features = ["derive"], workspace = true }

[dev-dependencies]
azihsm_crypto.workspace = true
azihsm_ddi.workspace = true
azihsm_ddi_interface.workspace = true
azihsm_ddi_mbor_sim.workspace = true
azihsm_ddi_mbor_test_helpers.workspace = true
azihsm_ddi_mbor_types.workspace = true
azihsm_session_ex_crypto.workspace = true
minicbor = { features = ["derive"], workspace = true }
parking_lot.workspace = true
x509.workspace = true

[lib]
doctest = false

[[test]]
name = "azihsm_ddi_tbor_tests"
path = "tests/azihsm_ddi_tbor_tests.rs"

[features]
# Forward backend selection to the azihsm_ddi facade so the integration
# test binary picks up the right backend. The same tests run across every
# transport — choose one with `--features emu` / `mock` / `sock`.
emu = ["azihsm_ddi/emu"]
mock = ["azihsm_ddi/mock"]
sock = ["azihsm_ddi/sock"]
# Opt-in feature for the `hw::` smoke tests. These tests drive real
# silicon via the native OS backend and require a physical device;
# excluded from the default `cargo test` build so contributor / CI
# runs on machines without a board don't panic in `open_hw_dev`.
hw-tests = []
table-4 = ["azihsm_ddi/table-4"]
table-64 = ["azihsm_ddi/table-64"]

[lints]
workspace = true
