# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.
[package]
edition = "2024"
name = "azihsm_fw_hsm_pal_traits"
version = "0.1.0"

[lib]
bench = false
doctest = false
test = false

[dependencies]
bitfield-struct.workspace = true
open-enum.workspace = true
zerocopy = { features = ["derive"], workspace = true }
