# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
exclude = ["fw"]
members = ["crates/reggen", "crates/systemrdl", "xtask"]
resolver = "2"

[workspace.dependencies]

# workspace members
azihsm_reggen = { path = "crates/reggen" }
azihsm_systemrdl = { path = "crates/systemrdl" }

# crates.io dependencies
anyhow = "1"
clap = { features = ["derive", "env"], version = "4.6.1" }
env_logger = "0.11"
log = "0.4"
proc-macro2 = "1"
quote = "1"
same-file = "1"
syn = { features = ["full"], version = "2" }
toml_edit = "0.25.11"
walkdir = "2"
winnow = "0.7"
xshell = "0.2"
[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
legacy_derive_helpers = "allow"                         # need for ddi_mbor_derive
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

# Code that needs unsafe should opt-in via a module-scoped allow.
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
await_holding_lock = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
needless_continue = "warn"
option_option = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
suboptimal_flops = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"
unwrap_used = "warn"

# Possible future additions:
#
# useful, but _very_ tedious to fix
#   doc_markdown = "warn"
# will be useful to weed-out stubbed codepaths in production
#   todo = "warn"
#   unimplemented = "warn"
# useful, but will require a follow-up PR to enable
#   map_err_ignore = "warn"
# useful, but requires a follow-up PR to enable
#   unused_self = "warn"

# Nested if / else if statements can be easier to read than an equivalent
# flattened statements.
collapsible_else_if = "allow"
collapsible_if = "allow"
# There are types where it makes sense to define the length, but it can never
# be empty. This lint is reasonable for container-like data-structures, but
# makes less sense for hardware-backed data structures.
len_without_is_empty = "allow"
# While it's generally a good idea to derive / implement `Default` when
# appropriate, there are many types in the HvLite codebase where a type has a
# `new()` method, but no sensible "Default".
new_without_default = "allow"
# This is the #1 most commonly ignored lint for a reason (at least according
# to [this famous issue](https://github.com/rust-lang/rust-clippy/issues/5418)
# on the clippy GitHub repo)! There are plenty of perfectly reasonable
# functions that require a large number of non-optional arguments,
# particularly when working with low-level hardware APIs.
too_many_arguments = "allow"
# This is a heuristic based lint that isn't always appropriate. While it's
# often a good to decompose complex types into more digestible chunks, there
# are many cases where a one-off complex type is required, and suppressing
# this lint will simply add line-noise.
type_complexity = "allow"
# This lint attempts to simplify usages of if let usage in a loop where only
# one variant type is used. While somewhat useful, its suggestions can lead to
# throwing away potentially useful error information in non-obvious ways.
manual_flatten = "allow"
# This lint warns about comparing boolean values in an `assert_eq!` statement when `assert!`
# could be used instead. While shorter, the explicit comparison can be more obvious to read
# in certain cases than unary operators with `assert!`.
bool_assert_comparison = "allow"
# This lint suggests collapsing Box::new(Foo::default()) into Box::default(). We often
# prefer to specify types completely for local code clarity's sake.
box_default = "allow"
# This lint is purely style, and we are ok with inlined and uninlined format args.
uninlined_format_args = "allow"
# Needed for bitflags 1.x compatibility. Remove when we update to bitflags 2.x
bad_bit_mask = "allow"
# Besides the misleading name (this lint also triggers on arrays), we believe that it
# doesn't provide value. If a developer gets their type wrong they'll notice and fix it.
# Sometimes you do want a list of a single range.
single_range_in_vec_init = "allow"
