# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2024"
name = "azihsm_ossl_engine_core"
publish = false
version = "0.1.0"

[features]
default = []
engine = ["azihsm_ossl_engine_sys/engine", "dep:thiserror", "dep:tracing"]

[dependencies]
azihsm_ossl_engine_sys.workspace = true
thiserror = { optional = true, workspace = true }
tracing = { optional = true, workspace = true }

[lints]
workspace = true
